--- a/style.css
+++ b/style.css
@@ -1,73 +1,113 @@
-body,html {
+* {
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins';
     background-color: rgba(92, 82, 102, 1);
     font-size: 10px;
 }
-h2 {
-    font-size: 7em;
-    color: white;
-    font-weight: 700;
-}
-a {
-    text-decoration: none;
+
+.navbar {
+    display: flex;
+    position: relative;
+    justify-content: space-between;
+    align-items: center;
     color: rgba(58, 188, 71, 1);
-}
-a:hover{
-    color: white;
-}
-#hero-section {
-    display: flex;
-    height: 100vh;
-}
-#nav-bar {
-    display: flex;
-    flex-direction: row;
     height: 10vh;
-    font-size: 2em;
-    align-items: center;
-    position: fixed;
 }
-.nav-bar-ul {
+
+.brand-title {
+    font-size: 1.5rem;
+    margin: .5rem;
     display: flex;
     flex-direction: row;
-    align-items: center;
-    list-style: none;
-    padding-left: 60vw;
-    column-gap: 5vw;  
 }
-#hero-text {
-    margin: 20vh 0 0 5vw;
+
+.navbar-links {
+    height: 100%;
+    font-size: 1.5rem;
+    padding-right: 50px;
+}
+
+.navbar-links ul {
+    display: flex;
+    margin: 0;
+    padding: 0;
+}
+
+.navbar-links li {
+    list-style: none;
     
 }
-.article-text > p {
-    font-size: 3em;
-    color: white;
-    padding-top: 2vh;
+
+.navbar-links li a {
+    display: block;
+    text-decoration: none;
+    color:rgba(58, 188, 71, 1);
+    padding: 1rem;
 }
-.article-text {
-    text-align: justify;
+
+.navbar-links li a:hover {
+  color: white;
 }
-#hero-img {
-    margin-top: -14px;
-    background-image: url('/images/Polygon 1.svg');
-    background-repeat: no-repeat;
-    background-position: top right;
+
+.toggle-button {
+    position: absolute;
+    top: .75rem;
+    right: 1rem;
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30px;
+    height: 21px;
 }
-.btn-active {
-    padding: 5px 20px 10px 20px;
-    text-align: center;
-    color : white;
-    background-color: rgba(92, 82, 102, 1);
-    font-weight: 600;
-    font-size: 2.5em;
-    border: 2px solid rgba(58, 188, 71, 0.5);
+
+.toggle-button .bar {
+    height: 3px;
+    width: 100%;
+    background-color: white;
     border-radius: 10px;
-    text-decoration: none;  
-}
-.btn-active:hover {
-    border: 2px solid rgba(58, 188, 71, 1);
-    color: rgba(58, 188, 71, 1);
 }
 
+@media (max-width: 800px) {
+    .navbar {
+        flex-direction: column;
+        align-items: flex-start;
+    }
 
+    .toggle-button {
+        display: flex;
+        height: 5vh;
+    }
+
+    .navbar-links {
+        display: none;
+        width: 100%;
+    }
+
+    .navbar-links ul {
+        width: 100%;
+        flex-direction: column;
+    }
+
+    .navbar-links ul li {
+        text-align: center;
+    }
+
+    .navbar-links ul li a {
+        padding: .5rem 1rem;
+    }
+
+    .navbar-links.active {
+        display: flex;
+    }
+    .brand-title {
+        margin-top: -15px;
+        font-size: 1.3rem;
+    }
+}
 
 
