--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ body {
     .navbar-links {
         display: none;
         width: 100%;
+        padding-left: 50px;
     }
 
     .navbar-links ul {
